--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
     display: flex;
     border: 2px solid black;
     height: 8vh;
+    width: 100vw;
     justify-content: space-evenly;
+    position: fixed;
  }
  .logo {
     display: flex;
@@ -51,24 +53,26 @@
  border: 2px solid rgb(65, 42, 42);
  height: 60vh;
  justify-content: space-between;
+ flex-wrap: wrap;
    
   }
   img {
     border-radius: 1.5rem;
-    width: 15vw;
-    height: 25vh;
+    width: 10vw;
+    height: 30vh;
   }
    
   
   .photo-one , .photo-two , .photo-three ,   .photo-four {
 border: 2px solid red;
+flex-wrap: wrap;
 height: 20vh;
-width: 10vw;
+width: 8vw;
   }
   .photo-four {
      
     justify-content: center;
-    flex-shrink: 4;
+ 
     align-self: flex-end;
   
   }
@@ -77,6 +81,7 @@ width: 10vw;
 align-self: center;
   } */
   .try{
+    flex-wrap: wrap;
     height: 50vh;
 width: 65vh;
     display: flex;
