--- a/style.css
+++ b/style.css
@@ -1,95 +1,147 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-   nav {
-    display: flex;
-    border: 2px solid black;
-    height: 8vh;
-    width: 100vw;
-    justify-content: space-evenly;
-    position: fixed;
- }
- .logo {
-    display: flex;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
- }
- .logo p , img{
-    align-self: center;
- }
- nav img {
-    width: 2rem;
-    height: 2rem;
- } 
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+nav {
+  display: flex;
+
+  height: 10vh;
+  width: 100vw;
+  justify-content: space-between;
+  position: fixed;
+  background-color: white;
+}
+.logo {
+  display: flex;
+}
+.logo p,
+img {
+  align-self: center;
+}
+nav img {
+  width: 2rem;
+  height: 2rem;
+}
+
+ul {
+  display: flex;
+  width: 10vw;
+  justify-content: space-evenly;
+  list-style-type: none;
+  align-items: center;
+}
+.nav-button {
+  display: flex;
+  width: 55vw;
+  justify-content: end;
+  align-items: center;
+}
+.nav-button ul {
+  width: 20vw;
+}
+
+.btn-flex button {
+  border: none;
+  border-radius: 10rem;
+  width: 5vw;
+  padding: 5px 0px;
+  margin: 0px 5px;
+  cursor: pointer;
+}
+
+.btn-flex {
+  display: flex;
+
+  justify-content: space-evenly;
+}
+
+.container {
+  height: 160vh;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+h1 {
+  align-self: flex-end;
+  text-align: center;
+  line-height: 4rem;
+  font-size: 3rem;
+}
+span {
+  color: rgb(194, 139, 0);
+}
+.douts {
+  font-size: 4.5rem;
+}
+.photo-section {
+  display: flex;
+  width: 100%;
+  height: 90vh;
+  justify-content: space-between;
+}
+
+.douts {
+  display: flex;
+}
+.photo-one {
+  display: flex;
+  flex-direction: column;
+}
+
+img {
+  border-radius: 1.5rem;
+  width: 13.5vw;
+  height: fit-content;
+}
+.two {
+  align-self: center;
+}
+.three {
+  align-self: flex-end;
+}
+.four {
+  align-self: flex-end;
+}
+.hover-btn:hover {
+  background-color: rgb(208, 155, 155) !important ;
+}
+.more-scetion {
+  display: flex;
+  flex-direction: column;
+  height: 10vh;
+  align-items: center;
+}
+.last-section {
+  position: sticky;
+  bottom: 10vh;
+  background-color: #c28c01;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  width: 50px;
+  height: 50px;
+}
+
+.last-section:hover {
+  transform: translate(0, -10px);
+}
+.last-section-text {
+
+  width: 100%;
+  font-weight: 700;
+  text-align: center;
+  background-color: #fefc9b;
+  box-shadow: 0 -8px 8px -1px rgb(206, 225, 231);
+  position: sticky;
+  bottom: 0;
+  padding: 5px 0;
  
- 
-  ul {
-    display: flex;
-    width: 20vw;
-    justify-content: space-evenly;
-    list-style-type: none;
-    align-items: center;
- }
- .nav-button {
-    display: flex;
-    width: 65vw;
-    justify-content: end;
-    align-items: center;
- }
-  .btn-flex{
-    display: flex;
-    width: 6rem;
-    justify-content: space-evenly;
-  
-  }
-  main {
-    height: 30vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .photo-section {
- display: flex;
- border: 2px solid rgb(65, 42, 42);
- height: 60vh;
- justify-content: space-between;
- flex-wrap: wrap;
-   
-  }
-  img {
-    border-radius: 1.5rem;
-    width: 10vw;
-    height: 30vh;
-  }
-   
-  
-  .photo-one , .photo-two , .photo-three ,   .photo-four {
-border: 2px solid red;
-flex-wrap: wrap;
-height: 20vh;
-width: 8vw;
-  }
-  .photo-four {
-     
-    justify-content: center;
- 
-    align-self: flex-end;
-  
-  }
-  
-  /* .photo-three {
-align-self: center;
-  } */
-  .try{
-    flex-wrap: wrap;
-    height: 50vh;
-width: 65vh;
-    display: flex;
-    justify-content: space-around;
-  }
-  .try .photo-two {
-align-self: center;
-  }
-  .try .photo-three {
-    align-self: flex-end;
-  }
+  height: 3.5rem;
+}
